Bug 496970 nsAbDirectoryRDFResource's URI munging sucks, stick to simple string munging, fixes apostrophe case only r+sr=Standard8